charts/mediaserver/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
    app.kubernetes.io/name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app: sonarr
        app.kubernetes.io/name: sonarr
    spec:
      containers:
        - name: metrics
          image: "ghcr.io/onedr0p/exportarr:v1.0.0"
          imagePullPolicy: IfNotPresent
          args:
            - sonarr
          ports:
            - name: monitoring
              containerPort: 9090
          livenessProbe:
            httpGet:
              path: /healthz
              port: monitoring
            failureThreshold: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: monitoring
            failureThreshold: 5
            periodSeconds: 10
        - name: sonarr
          image: "docker.io/linuxserver/sonarr:latest"
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 10
            periodSeconds: 20
          ports:
            - name: sonarr-port
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - name: mediaserver-volume
              mountPath: "/config"
              subPath: "config/sonarr"
            - name: mediaserver-volume
              mountPath: "/downloads"
              subPath: "downloads"
            - name: mediaserver-volume
              mountPath: "/tv"
              subPath: "media/tv"
            - mountPath: /anime
              name: mediaserver-volume
              subPath: media/anime
      volumes:
        - name: mediaserver-volume
          hostPath:
            path: /mnt/media
        - name: init-files-sonarr
          configMap:
            defaultMode: 493
            name: init-sonarr-cm
