charts/mediaserver/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  type: ClusterIP
  ports:
    - port: 8989
      targetPort: 8989
      protocol: TCP
      name: sonarr-port
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: monitoring
  selector:
    app: sonarr
